[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dnxhrTranscode_SASCHA_HUCK"
version = "0.1.0"
authors = [
    { name = "Sascha Huck", email="sascha@wirrewelt.de" },
]
description = "A small tool to transcode any video file to DNxHR."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = ""